# Minesweeper

./: CMakeLists.txt  README.md  install.sh
resources/: personal_best.txt  settings.txt
resources/sprites/casing/: casing.txt
resources/sprites/digits/: 0.txt  1.txt  3.txt  4.txt  5.txt
resources/sprites/resetButton/: cool.txt  smiley.txt
resources/sprites/tiles/: discovered1.txt  discovered2.txt  discovered3.txt  discovered4.txt  discovered8.txt  hidden.txt  hiddenBomb.txt  marked.txt  markedPoorly.txt  tile.txt
sprites/digits/: 2.txt  6.txt  7.txt  8.txt  9.txt
sprites/resetButton/: dead.txt
sprites/tiles/: discovered0.txt  discovered5.txt  discovered6.txt  discovered7.txt  discovered9.txt
src/: elements.cpp  elements.h  game.cpp  game.h  main.cpp  utilities.cpp  utilities.h
